# etl_plugin_architecture

./: README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  foo.txt  pyproject.toml
backend/src/: endpoint.py  model.py  settings.py  specs.py
backend/src/fixtures/: icon.py  merge_results.py  properties.py  table_headers.py
backend/src/plugins/: add_all_plugin.py  book_finder_plugin.py
frontend/: package-lock.json  package.json
frontend/book_arbitrage/: README.md  env.d.ts  package-lock.json
frontend/book_arbitrage/src/: App.vue
frontend/book_arbitrage/src/components/: Data.vue
frontend/epa_plugin_architecture/: package.json  vite.config.mts
frontend/epa_plugin_architecture/src/components/: Data.vue
