[project]
name = "etl_plugin_architecture"
version = "0.1.0"
description = ""
authors = [
    {name = "smd67",email = "dimigstephenm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "bonobo (>=0.6.4,<0.7.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "pluggy (>=1.6.0,<2.0.0)",
    "setuptools (>=81.0.0,<82.0.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "playwright-stealth (>=1.0.6,<2.0.0)",
    "playwright-recaptcha (>=0.5.1,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
